# oold-python

./: .coveragerc  .gitignore  .isort.cfg  404.html  CITATION.cff  CONTRIBUTING.md  Dockerfile  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytest.benchmark.ini  requirements.txt  setup.cfg  setup.py  sitemap.xml  tox.ini  zensical.toml
.devcontainer/: devcontainer.json
.github/: ISSUE_TEMPLATE.md
.github/actions/setup-python-env/: action.yml
.github/workflows/: ci.yml  main.yml  on-release-main.yml
dev/: index.html
docs/: about.md  api.md  architecture.md  contributing.md  dev.md  get-started.md  index.md  ldc.md  oold.md
docs/how-to/: backends.md  codegen.md  controller.md  index.md  object-graph-mapping.md  rdf-export.md
docs/stylesheets/: extra.css
examples/: backend_auth.py  linked_data_editor.ipynb  linked_data_editor.py  panelini_oold_graph.py  wiki_data.py
ldc/: index.html
oold/: index.html
scripts/: compare_benchmarks.py
search/: search_index.json
src/: example.py
src/ldc/: generator.py
src/ldc/drafts/: field_extras.py  ldc_generator.py  magic_field.py
src/ldc/model/: Bar.json  model.py  static.py
src/oold/: generator.py  static.py
src/oold/backend/: auth.py  document_store.py  interface.py  sparql.py
src/oold/drafts/: field_extras.py  ldc_generator.py  magic_field.py
src/oold/model/: __init__.py  model.py  static.py
src/oold/model/src/: Bar.json  Foo.json
src/oold/model/src/bar2/: Bar2.json
src/oold/model/v1/: __init__.py
src/oold/ui/anywidget/: JsonEditorWidget.ipynb
src/oold/ui/nicegui/: jsoneditor.py
src/oold/ui/panel/: demo.py
src/oold/ui/panel/anywidget_vite/: jsoneditor.py
src/oold/ui/vue/src/: jsoneditor.vue
src/oold/utils/: codegen.py  environment.py  json_tools.py  transform.py
tests/: __init__.py  conftest.py  query_test.py  static.py  test_auth.py  test_backends.py  test_base_controller.py  test_code_generation.py  test_ldc.py  test_oold.py  test_rdf.py  test_schema_generation.py  test_serialization.py  test_transform.py
tests/data/oneof_subschema/: model_v1.py  model_v2.py
tests/data/quantities/: model.py
tests/data/subclass_inheritance/: model_v1.py  model_v2.py
tests/data/test_core/: model_v1.py  model_v1_nested.py  model_v2.py  model_v2_nested.py
tests/data/test_core/src/: Bar.json  Foo.json
tests/data/test_core/src/bar2/: Bar2.json
tests/ui/panel/: panel_app.py  panel_frontend_test.py
